# RC_Vehicle_terminal

./: CMakeLists.txt
autorun/: Manual_launching_script.sh  Script.sh  Script_with_updating.sh
data/: gamepad.json  gpio.json  pref.json
other/: MovementController.h2  MovementController.txt  TODO.txt  Uploading_scripts.txt  old_CMakeLists.txt
src/: BuzzerController.cpp  BuzzerController.h  CompletionController.cpp  CompletionController.h  Constants.h  GeometrieLibrary.h  IUpdateable.h  LocalCommand.cpp  LocalCommand.h  LocalCommandPrefix.h  LocalCommandsListener.cpp  LocalCommandsListener.h  LocalCommandsListenersObserverSingleton.cpp  LocalCommandsListenersObserverSingleton.h  Logger.h  MainController.cpp  MainController.h  MechanicalConstants.h  MovementController.cpp  MovementController.h  WheelsSignalsCalculatorSimple.cpp  main.cpp
src/gamepad/: GamepadController.cpp  GamepadController.h  GamepadDataStruct.cpp  GamepadDataStruct.h  GamepadInputNames.h  InputConstants.h  InputController.h  InputKeys.h  KeyboardController.cpp  KeyboardController.h  KeyboardDataStruct.cpp  KeyboardDataStruct.h
src/gpio/: AnalogMovementCalculator.cpp  AnalogMovementCalculator.h  IWheelsSignalsCalculator.h  Pin.h  PinActionName.h  PinCommon.cpp  PinCommon.h  PinsInitializer.cpp  PinsInitializer.h  ReleasePin.cpp  ReleasePin.h  ReleasePinHardware.cpp  ReleasePinHardware.h  ReleasePinSoftware.cpp  ReleasePinSoftware.h  SinglePinActor.cpp  SinglePinActor.h  SoftwarePin.cpp  SoftwarePin.h  StickController.cpp  StickController.h  TouchPlace.cpp  TouchPlace.h  WheelActor.cpp  WheelActor.h  WheelsControlDataStruct.h  WheelsSignalsCalculatorAnalog.cpp  WheelsSignalsCalculatorAnalog.h  WheelsSignalsCalculatorDigital.cpp  WheelsSignalsCalculatorDigital.h  WheelsSignalsCalculatorSimple.cpp  WheelsSignalsCalculatorSimple.h
src/libs/: GeometrieLibrary.h  Quarter.h  TwoValuesStruct.h
src/preferences/: PreferencesLoader.cpp  PreferencesLoader.h  WheelMovementDataStruct.h
src/tests/: TestStick.cpp  TestStick.h
